--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.2.3",
     "canvas": "^2.11.2",
+    "cassandra-driver": "^4.7.2",
+    "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.17.1",
     "fs": "^0.0.1-security",
