--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jspdf": "^2.5.1",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2",
+    "neo4j-driver": "^5.13.0",
     "pako": "^2.1.0",
     "qrcode": "^1.5.1",
     "qrcode.react": "^3.1.0",
