--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "mongoose": "^7.5.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "neo4j-driver": "^5.13.0"
   }
 }
